--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "paystack-api": "^2.0.6",
+    "qrcode": "^1.5.4",
     "stripe": "^18.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
