--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^8.11.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.10",
     "paystack-api": "^2.0.6",
     "qrcode": "^1.5.4",
     "stripe": "^18.0.0",
@@ -24,7 +25,7 @@
     "winston": "^3.17.0"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "name": "event-app-server",
   "version": "1.0.0",
